@@ -1,3 +1,10 @@
+drkns 18.08.2016 02:34:26 +0200 - build 4760
+
+1. 0003274: В полях ввода комбинация клавиш переключения языка Ctrl-Shift ошибочно фиксирует начало изменения поля
+   Обработка FEDITLINE_CLEARFLAG частично вынесена в EditControl.
+
+2. Прочий мелкий рефакторинг.
+
 svs 17.08.2016 20:23:57 +0300 - build 4759
 
 1. SQLite 3.14.1
